--- a/manifest.json
+++ b/manifest.json
@@ -1,4 +1,5 @@
 {
   "short_name": "NBC",
-  "name": "The Natural Barber Company"
+  "name": "The Natural Barber Company",
+  "theme_color": "#ffffff"
 }
