--- a/manifest.json
+++ b/manifest.json
@@ -13,6 +13,8 @@
     "sizes": "512x512"
   }
 ],
-  "background_color": "#3367D6",
+  "start_url": "/",
+  "background_color": "#ffffff",
+  "display": "standalone",
   "theme_color": "#ffffff"
 }
