--- a/manifest.json
+++ b/manifest.json
@@ -13,7 +13,7 @@
     "sizes": "512x512"
   }
 ],
-  "start_url": "/",
+  "start_url": "https://www.naturalbarber.co/",
   "background_color": "#ffffff",
   "display": "standalone",
   "theme_color": "#ffffff"
