Updated url for image

--- a/manifest.json
+++ b/manifest.json
@@ -3,7 +3,7 @@
   "name": "The Natural Barber Company",
   "icons": [
   {
-    "src": "https://raw.githubusercontent.com/joe-digi/NBC-Web-App/master/the-natural-barber-company-logo-192.png",
+    "src": "https://github.com/joemallory/NBC-Web-App/blob/master/the-natural-barber-company-logo-192.png?raw=true",
     "type": "image/png",
     "sizes": "192x192"
   },
