Updated Image URL

--- a/manifest.json
+++ b/manifest.json
@@ -8,7 +8,7 @@
     "sizes": "192x192"
   },
   {
-    "src": "https://raw.githubusercontent.com/joe-digi/NBC-Web-App/master/the-natural-barber-company-logo-512.png",
+    "src": "https://github.com/joemallory/NBC-Web-App/blob/master/the-natural-barber-company-logo-512.png?raw=true",
     "type": "image/png",
     "sizes": "512x512"
   }
